# pillow-rust

./: Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
crates/pil-rust-core/: Cargo.toml
crates/pil-rust-python/: Cargo.toml
crates/pil-rust-wasm/: Cargo.toml
crates/pil-rust-wasm/src/: main.rs
docs/: PIL-STATUS.md
docs/plans/: 2026-02-28-pillow-compat-tier1.md
python/PIL/: Image.py  ImageChops.py  ImageColor.py  ImageDraw.py  ImageEnhance.py  ImageFilter.py  ImageFont.py  ImageOps.py  ImagePath.py  ImageSequence.py  ImageStat.py  __init__.py
tests/pillow_compat/: helper.py  run_compat.py  test_image_copy.py  test_image_crop.py  test_image_getbbox.py  test_image_split.py  test_image_tobytes.py  test_imagechops.py  test_imagecolor.py  test_imageenhance.py  test_imagepath.py  test_imagestat.py  xfail.txt
tests/python/: conftest.py  helper.py  pytest_shim.py  run_all.py  test_composition.py  test_image.py  test_image_access.py  test_image_access_upstream.py  test_image_access_upstream2.py  test_image_alpha_composite.py  test_image_bytes.py  test_image_bytes_exact.py  test_image_convert2.py  test_image_convert_exact.py  test_image_convert_matrix.py  test_image_convert_upstream.py  test_image_copy_upstream.py  test_image_crop.py  test_image_crop_exact.py  test_image_crop_oob.py  test_image_crop_upstream.py  test_image_error_handling_upstream.py  test_image_filter.py  test_image_filter_extra.py  test_image_filter_upstream.py  test_image_frombytes.py  test_image_getbbox_upstream.py  (+87 more)
(+2 files in other folders)
