[package]
name = "pil-rust-wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pil-python"
path = "src/main.rs"

[dependencies]
pil-rust-python = { path = "../pil-rust-python" }
rustpython = { workspace = true, features = ["freeze-stdlib", "threading", "host_env"] }
rustpython-vm = { workspace = true }
